// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Header Correction 1`] = `
<View
  style={
    Array [
      Object {
        "borderTopLeftRadius": 5,
        "borderTopRightRadius": 5,
        "flexDirection": "row",
        "justifyContent": "center",
        "padding": 24,
      },
      false,
      false,
      Object {
        "backgroundColor": "#d3f1e2",
      },
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="undefined"
    bbWidth="undefined"
    color="#3ec483"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "height": 23,
          "width": 23,
        },
        false,
        undefined,
      ]
    }
    vbHeight={24}
    vbWidth={24}
  >
    <RNSVGPath
      d="M0 0h24v24H0z"
      fill={null}
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
    <RNSVGPath
      d="M11.042 22c-4.962 0-9-4.037-9-9s4.038-9 9-9v2c-3.86 0-7 3.14-7 7s3.14 7 7 7 7-3.14 7-7h2c0 4.963-4.038 9-9 9z"
      fill={
        Array [
          0,
          0.24313725490196078,
          0.7686274509803922,
          0.5137254901960784,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
    <RNSVGPath
      d="M12.134 16.86l-4.976-4.976 1.767-1.768 3.024 3.024 8.125-9.932 1.935 1.584z"
      fill={
        Array [
          0,
          0.24313725490196078,
          0.7686274509803922,
          0.5137254901960784,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
  </RNSVGSvgView>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#546E7A",
        "fontSize": 17,
        "fontWeight": "bold",
        "paddingLeft": 8,
        "textAlign": "center",
      }
    }
  >
    Foo bar baz
  </Text>
</View>
`;

exports[`Storyshots Card Header Key point 1`] = `
<View
  style={
    Array [
      Object {
        "borderTopLeftRadius": 5,
        "borderTopRightRadius": 5,
        "flexDirection": "row",
        "justifyContent": "center",
        "padding": 24,
      },
      false,
      Object {
        "backgroundColor": "#ffded4",
      },
      false,
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="undefined"
    bbWidth="undefined"
    color="#ff7043"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "height": 23,
          "width": 23,
        },
        false,
        undefined,
      ]
    }
    vbHeight={24}
    vbWidth={24}
  >
    <RNSVGPath
      d="M0 .001h24v24H0z"
      fill={null}
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
    <RNSVGPath
      d="M20.292 10.364l1.414-1.414-2.474-2.475 1.413-1.413-2.121-2.121-9.489 9.491a4.973 4.973 0 0 0-1.918-.43L7.002 12c-2.694 0-4.937 2.19-5 4.881a4.966 4.966 0 0 0 1.38 3.57 4.964 4.964 0 0 0 3.5 1.548l.121.001c2.69 0 4.931-2.189 4.995-4.881a4.964 4.964 0 0 0-.719-2.69l3.71-3.711 2.474 2.476 1.415-1.414-2.474-2.476 1.414-1.415 2.474 2.475zM7 19a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"
      fill={
        Array [
          0,
          1,
          0.4392156862745098,
          0.2627450980392157,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
  </RNSVGSvgView>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#546E7A",
        "fontSize": 17,
        "fontWeight": "bold",
        "paddingLeft": 8,
        "textAlign": "center",
      }
    }
  >
    Foo bar baz
  </Text>
</View>
`;

exports[`Storyshots Card Header Tip 1`] = `
<View
  style={
    Array [
      Object {
        "borderTopLeftRadius": 5,
        "borderTopRightRadius": 5,
        "flexDirection": "row",
        "justifyContent": "center",
        "padding": 24,
      },
      Object {
        "backgroundColor": "#fff8c5",
      },
      false,
      false,
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="undefined"
    bbWidth="undefined"
    color="#ffc035"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "height": 21,
          "width": 21,
        },
        false,
        undefined,
      ]
    }
    vbHeight={24}
    vbWidth={24}
  >
    <RNSVGGroup
      fill={
        Array [
          0,
          1,
          0.7529411764705882,
          0.20784313725490197,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      font={Object {}}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    >
      <RNSVGPath
        d="M9 23h2v1h2v-1h2v-2H9z"
        fill={
          Array [
            0,
            0,
            0,
            0,
            1,
          ]
        }
        fillOpacity={1}
        fillRule={0}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fillRule",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth="1"
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M12 5c3.9 0 7 3.1 7 7 0 2.7-1.6 5.2-4 6.3v.7c0 .6-.4 1-1 1h-4c-.6 0-1-.4-1-1v-.7c-2.4-1.1-4-3.6-4-6.3 0-3.9 3.1-7 7-7z"
        fill={
          Array [
            0,
            0,
            0,
            0,
            1,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={Array []}
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth="1"
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M11 0h2v4h-2zM0 11h4v2H0zM20 11h4v2h-4zM17.308 5.277l2.97-2.97 1.414 1.414-2.97 2.97zM2.308 3.722l1.414-1.414 2.97 2.97-1.414 1.414z"
        fill={
          Array [
            0,
            0,
            0,
            0,
            1,
          ]
        }
        fillOpacity={1}
        fillRule={0}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fillRule",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth="1"
        x={0}
        y={0}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#546E7A",
        "fontSize": 17,
        "fontWeight": "bold",
        "paddingLeft": 8,
        "textAlign": "center",
      }
    }
  >
    Foo bar baz
  </Text>
</View>
`;
